[project]
name = "campaign-muti-agent"
version = "0.1.0"
description = "Event-sourced multi-agent command/runtime/rehearsal framework with A2A transport, governance, HITL, RAG memory, and chaos evaluation."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["campaign", "campaign.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["campaign/tests"]
